--- a/playpart.html
+++ b/playpart.html
@@ -7,40 +7,44 @@
 <body>
     <h1>Nagarjuna Reddy, Kunkala acts in a play</h1>
     <h2>A Doll's House (by Henrik Ibsen)</h2>
+    <h4>KROGSTAD.</h4>
     <p>
-        KROGSTAD.
         That may be so, but you had no right to throw me over for anyone else’s
         sake.
     </p>
+
+    <h4>MRS LINDE.</h4>
     <p>
-        MRS LINDE.
         Indeed I don’t know. Many a time did I ask myself if I had the right to
         do it.
     </p>
+
+    <h4>KROGSTAD.</h4>
+    <p>_[more gently]_.</p>
     <p>
-        KROGSTAD.
-        _[more gently]_. When I lost you, it was as if all the solid ground
+        When I lost you, it was as if all the solid ground
         went from under my feet. Look at me now—I am a shipwrecked man clinging
         to a bit of wreckage.
     </p>
+
+    <h4>MRS LINDE.</h4>
+    <p>But help may be near.</p>
+
+    <h4>KROGSTAD.</h4>
+    <p>It was near; but then you came and stood in my way.</p>
+
+
+    <h4>MRS LINDE.</h4>
     <p>
-        MRS LINDE.
-        But help may be near.
-    </p>
-    <p>
-        KROGSTAD.
-        It was near; but then you came and stood in my way.
-    </p>
-    <p>
-        MRS LINDE.
         Unintentionally, Nils. It was only today that I learned it was your
         place I was going to take in the Bank.
     </p>
+
+    <h4>KROGSTAD.</h4>
     <p>
-        KROGSTAD.
         I believe you, if you say so. But now that you know it, are you not
         going to give it up to me?
-
     </p>
+
 </body>
 </html>
