Added blur style to names

--- a/playpart.html
+++ b/playpart.html
@@ -51,5 +51,25 @@
         going to give it up to me?
     </p>
 
+    <br>
+    <table class="table">
+        <tr>
+            <th>Character</th>
+            <th>Actor</th>
+            <th>Understudy</th>
+        </tr>
+        <tr>
+            <td>KROGSTAD</td>
+            <td>Tom Cruze</td>
+            <td>Vin Diesel</td>
+        </tr>
+        <tr>
+            <td>MRS LINDE</td>
+            <td>Hermoine</td>
+            <td>Shakira</td>
+        </tr>
+    </table>
+
+    <a href="./secondact.html">Go to Second Act</a>
 </body>
 </html>
