Added Bonus part

--- a/playpart.html
+++ b/playpart.html
@@ -6,6 +6,7 @@
     <title>Webapps Assignment-4</title>
 </head>
 <body>
+    <h3><a href="./bonus.html">BONUS</a></h3>
     <h1>Nagarjuna Reddy, Kunkala acts in a play</h1>
     <h2>A Doll's House (by Henrik Ibsen)</h2>
     <h4 class="krogstad">KROGSTAD.</h4>
@@ -71,5 +72,7 @@
     </table>
 
     <a href="./secondact.html">Go to Second Act</a>
+
+
 </body>
 </html>
